correções na documentação da api
